Fix overlapping nav

--- a/src/scss/components/Header.scss
+++ b/src/scss/components/Header.scss
@@ -4,7 +4,7 @@
 		display: flex;
 		justify-content: center;
 		min-height: 100vh;
-		padding: 10rem;
+		padding: 10rem 0;
 	}
 
 	&__content {
