--- a/src/scss/components/Projects.scss
+++ b/src/scss/components/Projects.scss
@@ -9,6 +9,12 @@
 		padding: 0 1.5rem;
 	}
 
+	&__list {
+		@media screen and (min-width: 720px) and (max-width: 1400px) {
+			padding-right: 7.8rem;
+		}
+	}
+
 	&__item {
 		margin-bottom: 3rem;
 		position: relative;
@@ -51,9 +57,9 @@
 			display: inline-block;
 			margin: 0;
 			margin-left: 2rem;
-			padding-top: calc(10/16 * 36rem - 2px);
+			padding-top: calc(10/16 * 30rem - 2px);
 			vertical-align: top;
-			width: calc(36rem - 2px);
+			width: calc(30rem - 2px);
 		}
 
 		@media screen and (min-width: 1100px) {
@@ -76,7 +82,7 @@
 			margin-left: 2rem;
 			padding-top: 0.5rem;
 			vertical-align: top;
-			width: calc(100% - 40rem); // Full width - image width + image position
+			width: calc(100% - 34rem); // Full width - image width + image position
 		}
 
 		@media screen and (min-width: 1100px) {
